--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         <p>As a bilingual (English/Spanish) <strong>Digital Forensics &amp; Data Analytics</strong> professional, I transform complex digital evidence into clarity and actionable intelligence. My work bridges the precision of forensic science with the strategic depth of analytics—helping organizations detect fraud, understand behavior, and make defensible, data-driven decisions.</p>
         <p>I’ve led high-profile investigations, developed forensic SOPs aligned with <strong>ANAB</strong> and <strong>ISO/IEC 17025</strong>, and implemented new capabilities like <strong>Vehicle Forensics</strong> and <strong>Insider Threat analytics</strong>. From uncovering timekeeping fraud that saved over <strong>$250,000</strong> to refining workflows that cut case turnaround by <strong>90%</strong>, my mission is to reveal truth—efficiently, ethically, and with impact.</p>
         <blockquote>“Data, like consciousness, reveals what you choose to observe.”</blockquote>
+        <!-- Neville Sidebar Quote -->
+        <div class="sidebar-quote">
+        <p>“Change your conception of yourself, and you will automatically change the world in which you live.”</p>
+        <span>— Neville Goddard</span>
+        </div>
       </div>
     </section>
 
