--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
     <section id="contact" class="section">
       <div class="container narrow center">
         <h2>Contact</h2>
-        <p><strong>Email:</strong> <a href="mailto:albefls97@gmail.com">albefls97@gmail.com</a></p>
-        <p><strong>Location:</strong> Arlington, VA &nbsp;|&nbsp; <strong>Languages:</strong> English / Spanish</p>
+        <p><strong>Email:</strong> <a href="mailto:mmorenojr@quomtion.com">mmorenojr@quomtion.com</a></p>
+        <p><strong>Location:</strong> Houston, TX &nbsp;|&nbsp; <strong>Languages:</strong> English / Spanish</p>
         <p class="fine">© <span id="year"></span> Mario Moreno Jr.</p>
       </div>
     </section>
