--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h4>Challenge</h4>
             <p>Too many unstructured user activity logs across email, Box, and SharePoint slowed investigations.</p>
             <h4>Approach</h4>
-            <p>Built a Proofpoint + Varonis + Torq correlation workflow with Power Query/Excel pivots for behavioral flags and file movement visibility.</p>
+            <p>Built a Proofpoint + Varonis with Power Query/Excel pivots for behavioral flags and file movement visibility.</p>
             <h4>Outcome</h4>
             <p>Reduced review time by <strong>70%</strong>; improved triage accuracy by <strong>40%</strong>; faster exfiltration detection.</p>
             <h4>Translation</h4>
